# orbifold

./: CMakeLists.txt  README.md
include/orbifold/: OrbifoldSymbol.h
src/: OrbifoldSymbol.cpp  main.cpp
tests/: OrbifoldSymbolTests.cpp
